--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@react-navigation/drawer": "^7.3.3",
     "@react-navigation/native": "^7.1.0",
     "expo": "~52.0.42",
+    "expo-camera": "~16.0.18",
     "expo-font": "~13.0.4",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "^17.0.6",
     "expo-router": "~4.0.19",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
