--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-toast-message": "^2.2.1",
+    "react-native-torch": "^1.2.0",
     "react-native-web": "~0.19.13",
     "tailwind": "^4.0.0",
     "tailwind-rn": "^4.2.0"
